--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://products.alight.com/design/young/cropper/",
   "name": "croptool",
   "version": "0.1.0",
   "private": true,
